# Pallas-agent

./: .env.example  .gitignore  AGENTS.md  AI.MD  CONTINUE.md  FUTURE_FEATURES.MD  INSTRUCTION.MD  LICENSE  README.md  ROADMAP.MD  install.sh  pallas_constants.py  pallas_state.py  pyproject.toml  run_agent.py  toolsets.py
cron/: jobs.py  scheduler.py
docs/: architecture.md  creating-skills.md  environments.md  gateway-internals.md  installation.md  prompt-assembly.md  sandbox-backends.md  tools-runtime.md
environments/: agent_loop.py  pallas_base_env.py
gateway/: __init__.py  delivery.py  hooks.py  pairing.py  session.py
optional-skills/autonomous-ai-agents/multi-agent-swarm/: SKILL.md
optional-skills/autonomous-ai-agents/self-healing-agent/: SKILL.md
optional-skills/productivity/notion-integration/: SKILL.md
optional-skills/productivity/obsidian-sync/: SKILL.md
optional-skills/research/academic-paper-analysis/: SKILL.md
optional-skills/research/competitive-intelligence/: SKILL.md
pallas_adapter/: __init__.py  auth.py  session.py
pallas_cli/: __init__.py  banner.py  commands.py  default_soul.py  doctor.py  main.py  runtime_provider.py
pallas_core/: __init__.py  auxiliary_client.py  context_compressor.py  display.py  insights.py  memory_store.py  model_metadata.py  pallas_constants.py  pallas_state.py  pallas_time.py  prompt_builder.py  prompt_caching.py  provider_adapter.py  redact.py  skill_commands.py  toolsets.py  trajectory.py  usage_pricing.py
pallas_registry/: agent.json
scripts/: install.ps1  install.sh  release.py
skills/autonomous-ai-agents/pallas-self-improvement/: SKILL.md
skills/autonomous-ai-agents/task-orchestration/: SKILL.md
skills/creative/brainstorming/: SKILL.md
skills/creative/writing-assistant/: SKILL.md
skills/domain/finance/: SKILL.md
tests/: test_redact.py  test_time.py  test_tools.py
tools/: __init__.py  approval.py  checkpoint_manager.py  clarify_tool.py  code_execution_tool.py  delegate_tool.py  file_tools.py  interrupt.py  memory_tool.py  safety.py  session_search_tool.py  skill_manager_tool.py  todo_tool.py  vision_tool.py  web_tools.py
tools/sandbox_backends/: __init__.py  docker.py  local.py  modal.py  ssh.py
website/: index.html  main.js  style.css
(+15 files in other folders)
