[project]
name = "pallas-agent"
version = "0.1.0"
description = "A self-evolving AI agent system for professional automation and knowledge management."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.34.0",
    "google-generativeai>=0.7.0",
    "pydantic>=2.8.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "sqlmodel>=0.0.22",
    "openai>=1.40.0",
]

[project.scripts]
pallas = "pallas_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "pallas_adapter",
    "pallas_registry",
    "pallas_core",
    "pallas_cli",
    "gateway",
    "cron",
    "environments",
    "tools",
    "pallas_constants.py",
    "pallas_state.py",
    "pallas_time.py"
]
